Move to Certifico branding

--- a/src/components/atoms/VerifyButton/_components.verify-button.scss
+++ b/src/components/atoms/VerifyButton/_components.verify-button.scss
@@ -1,6 +1,6 @@
 @import '../../../shared-styles/settings.variables';
 
-$mainColor: #2ab27b;
+$mainColor: #581689;
 $secondaryColor: #fff;
 
 .buv-c-verify-button {
