--- a/src/shared-styles/_settings.variables.scss
+++ b/src/shared-styles/_settings.variables.scss
@@ -1,5 +1,5 @@
-$successColor: rgba(42, 178, 123, 1);
-$successBackgroundColor: rgba(42, 178, 123, .1);
+$successColor: rgba(102,208,247, 1);
+$successBackgroundColor: rgba(102,208,247, .1);
 
 $errorColor: rgba(208, 2, 27, 1);
 $errorBackgroundColor: rgba(208, 2, 27, .1);
