--- a/src/components/atoms/BlockcertsLogo/_components.blockcerts-logo.scss
+++ b/src/components/atoms/BlockcertsLogo/_components.blockcerts-logo.scss
@@ -7,7 +7,12 @@
 
 .buv-c-logo--small {
   width: 113px;
-  height: 16px;
+  height: 26px;
+}
+
+.buv-c-logo--certifico {
+  width: 113px;
+  height: 50px;
 }
 
 .buv-c-logo--medium {
